force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>受注</label>
    <nameField>
        <displayFormat>O{YYYY}{MM}-{000000}</displayFormat>
        <label>オブジェクトID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>