force-app/main/default/objects/Order__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>請求合計金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>