force-app/main/default/objects/Order__c/fields/BookName__c.field-meta.xml
<CustomField>
    <fullName>BookName__c</fullName>
    <label>書誌名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>