force-app/main/default/objects/Order__c/fields/BookNumber__c.field-meta.xml
<CustomField>
    <fullName>BookNumber__c</fullName>
    <label>号数情報</label>
    <length>100</length>
    <type>Text</type>
</CustomField>