force-app/main/default/objects/Order__c/fields/BuildlingName__c.field-meta.xml
<CustomField>
    <fullName>BuildlingName__c</fullName>
    <label>住所３(ビル、マンション名等)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>