force-app/main/default/objects/Order__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <label>取消日</label>
    <type>Date</type>
</CustomField>