force-app/main/default/objects/Order__c/fields/CityStreet__c.field-meta.xml
<CustomField>
    <fullName>CityStreet__c</fullName>
    <label>住所２(市区町村、番地)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>