force-app/main/default/objects/Order__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <label>締日</label>
    <length>1</length>
    <type>Text</type>
</CustomField>