force-app/main/default/objects/Order__c/fields/ContractNumOfBook__c.field-meta.xml
<CustomField>
    <fullName>ContractNumOfBook__c</fullName>
    <label>契約冊数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>