force-app/main/default/objects/Order__c/fields/ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriod__c</fullName>
    <label>契約期間（月）</label>
    <length>4</length>
    <type>Text</type>
</CustomField>