force-app/main/default/objects/Order__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>