force-app/main/default/objects/Order__c/fields/CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CouponCode__c</fullName>
    <label>クーポンコード</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>