force-app/main/default/objects/Order__c/fields/CouponDiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>CouponDiscountPrice__c</fullName>
    <label>クーポン割引額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>