force-app/main/default/objects/Order__c/fields/DiscountFirstMonth__c.field-meta.xml
<CustomField>
    <fullName>DiscountFirstMonth__c</fullName>
    <label>初月割引額</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>