force-app/main/default/objects/Order__c/fields/DiscountSet__c.field-meta.xml
<CustomField>
    <fullName>DiscountSet__c</fullName>
    <label>組合せ割引額</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>