force-app/main/default/objects/Order__c/fields/DownloadDate__c.field-meta.xml
<CustomField>
    <fullName>DownloadDate__c</fullName>
    <label>ダウンロード日</label>
    <type>Date</type>
</CustomField>