force-app/main/default/objects/Order__c/fields/EbisuDataType__c.field-meta.xml
<CustomField>
    <fullName>EbisuDataType__c</fullName>
    <label>えびすデータ区分</label>
    <length>2</length>
    <type>Text</type>
</CustomField>