force-app/main/default/objects/Order__c/fields/EbisuForm01__c.field-meta.xml
<CustomField>
    <fullName>EbisuForm01__c</fullName>
    <label>えびす週刊東洋経済月額版を解約される理由をご選択ください(複数選択可)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>