force-app/main/default/objects/Order__c/fields/EbisuForm02__c.field-meta.xml
<CustomField>
    <fullName>EbisuForm02__c</fullName>
    <label>えびす自由欄</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>