force-app/main/default/objects/Order__c/fields/EbisuForm03__c.field-meta.xml
<CustomField>
    <fullName>EbisuForm03__c</fullName>
    <label>えびす株式ウイークリーを解約される理由をご選択ください(複数選択可)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>