force-app/main/default/objects/Order__c/fields/EbisuMemberId__c.field-meta.xml
<CustomField>
    <fullName>EbisuMemberId__c</fullName>
    <label>えびす会員ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>