force-app/main/default/objects/Order__c/fields/EbisuOrderId__c.field-meta.xml
<CustomField>
    <fullName>EbisuOrderId__c</fullName>
    <label>えびす受注番号(東洋経済受注番号)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>