force-app/main/default/objects/Order__c/fields/EbisuPresent__c.field-meta.xml
<CustomField>
    <fullName>EbisuPresent__c</fullName>
    <label>えびすプレゼント</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>