force-app/main/default/objects/Order__c/fields/EbisuPresentName__c.field-meta.xml
<CustomField>
    <fullName>EbisuPresentName__c</fullName>
    <label>えびすプレゼント名称</label>
    <length>25</length>
    <type>Text</type>
</CustomField>