force-app/main/default/objects/Order__c/fields/EbisuRegistDate__c.field-meta.xml
<CustomField>
    <fullName>EbisuRegistDate__c</fullName>
    <label>えびす登録日時</label>
    <type>DateTime</type>
</CustomField>