force-app/main/default/objects/Order__c/fields/EbisuRegistUserId__c.field-meta.xml
<CustomField>
    <fullName>EbisuRegistUserId__c</fullName>
    <label>えびす登録者</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>