force-app/main/default/objects/Order__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>PCメールアドレス</label>
    <type>Email</type>
</CustomField>