force-app/main/default/objects/Order__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>