force-app/main/default/objects/Order__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>名（漢字）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>