force-app/main/default/objects/Order__c/fields/FirstNameKana__c.field-meta.xml
<CustomField>
    <fullName>FirstNameKana__c</fullName>
    <label>名（カナ）</label>
    <length>15</length>
    <type>Text</type>
</CustomField>