force-app/main/default/objects/Order__c/fields/FlgAutoUpdate__c.field-meta.xml
<CustomField>
    <fullName>FlgAutoUpdate__c</fullName>
    <label>自動更新</label>
    <length>1</length>
    <type>Text</type>
</CustomField>