force-app/main/default/objects/Order__c/fields/FlgDiscountFirstMonth__c.field-meta.xml
<CustomField>
    <fullName>FlgDiscountFirstMonth__c</fullName>
    <label>初月割引</label>
    <length>1</length>
    <type>Text</type>
</CustomField>