force-app/main/default/objects/Order__c/fields/FlgErrCredit__c.field-meta.xml
<CustomField>
    <fullName>FlgErrCredit__c</fullName>
    <label>クレジットカードエラーフラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>