force-app/main/default/objects/Order__c/fields/FlgPlanChanged__c.field-meta.xml
<CustomField>
    <fullName>FlgPlanChanged__c</fullName>
    <label>プラン変更済み</label>
    <length>1</length>
    <type>Text</type>
</CustomField>