force-app/main/default/objects/Order__c/fields/KokyakuBillCode__c.field-meta.xml
<CustomField>
    <fullName>KokyakuBillCode__c</fullName>
    <label>個客番 請求先コード(=大口コード)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>