force-app/main/default/objects/Order__c/fields/KokyakuBillCount__c.field-meta.xml
<CustomField>
    <fullName>KokyakuBillCount__c</fullName>
    <label>個客番 請求回数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>