force-app/main/default/objects/Order__c/fields/KokyakuBillDept__c.field-meta.xml
<CustomField>
    <fullName>KokyakuBillDept__c</fullName>
    <label>個客番 請求先部署名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>