force-app/main/default/objects/Order__c/fields/KokyakuBillName__c.field-meta.xml
<CustomField>
    <fullName>KokyakuBillName__c</fullName>
    <label>個客番 請求先名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>