force-app/main/default/objects/Order__c/fields/KokyakuBillPerson__c.field-meta.xml
<CustomField>
    <fullName>KokyakuBillPerson__c</fullName>
    <label>個客番 請求先個人名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>