force-app/main/default/objects/Order__c/fields/KokyakuBillStop__c.field-meta.xml
<CustomField>
    <fullName>KokyakuBillStop__c</fullName>
    <label>個客番 請求中止フラグ</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>