force-app/main/default/objects/Order__c/fields/KokyakuCurReadStatus__c.field-meta.xml
<CustomField>
    <fullName>KokyakuCurReadStatus__c</fullName>
    <description>&quot;現読&quot;か&quot;非読&quot;の2パターン</description>
    <inlineHelpText>&quot;現読&quot;か&quot;非読&quot;の2パターン</inlineHelpText>
    <label>個客番 現読ステータス</label>
    <length>4</length>
    <type>Text</type>
</CustomField>