force-app/main/default/objects/Order__c/fields/KokyakuEmNg__c.field-meta.xml
<CustomField>
    <fullName>KokyakuEmNg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>個客番 EM拒否ﾌﾗｸﾞ</label>
    <type>Checkbox</type>
</CustomField>