force-app/main/default/objects/Order__c/fields/KokyakuModifyContract__c.field-meta.xml
<CustomField>
    <fullName>KokyakuModifyContract__c</fullName>
    <label>個客番 契約更新</label>
    <length>8</length>
    <type>Text</type>
</CustomField>