force-app/main/default/objects/Order__c/fields/KokyakuModifyWoAddr__c.field-meta.xml
<CustomField>
    <fullName>KokyakuModifyWoAddr__c</fullName>
    <label>個客番 住所以外更新</label>
    <length>8</length>
    <type>Text</type>
</CustomField>