force-app/main/default/objects/Order__c/fields/KokyakuNewContractOrLatestBillDate__c.field-meta.xml
<CustomField>
    <fullName>KokyakuNewContractOrLatestBillDate__c</fullName>
    <description>&quot;YYYYMMDD&quot;で入る</description>
    <inlineHelpText>&quot;YYYYMMDD&quot;で入る</inlineHelpText>
    <label>個客番 新契約・最新請求日</label>
    <length>8</length>
    <type>Text</type>
</CustomField>