force-app/main/default/objects/Order__c/fields/KokyakuNewContractOrLatestBillType__c.field-meta.xml
<CustomField>
    <fullName>KokyakuNewContractOrLatestBillType__c</fullName>
    <description>&quot;IL&quot;,&quot;BL&quot;,&quot;DL&quot;,&quot;10&quot;,&quot;20&quot;の5パターン</description>
    <inlineHelpText>&quot;IL&quot;,&quot;BL&quot;,&quot;DL&quot;,&quot;10&quot;,&quot;20&quot;の5パターン</inlineHelpText>
    <label>個客番 新契約・最新請求種別</label>
    <length>2</length>
    <type>Text</type>
</CustomField>