force-app/main/default/objects/Order__c/fields/KokyakuNewOrContiInvCount__c.field-meta.xml
<CustomField>
    <fullName>KokyakuNewOrContiInvCount__c</fullName>
    <description>個客番 新契約・継続案内回数</description>
    <label>個客番 新契約・継続案内回数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>