force-app/main/default/objects/Order__c/fields/KokyakuNewOrContiInvStandardTime__c.field-meta.xml
<CustomField>
    <fullName>KokyakuNewOrContiInvStandardTime__c</fullName>
    <description>&quot;YYYYMM&quot;で入る</description>
    <inlineHelpText>&quot;YYYYMM&quot;で入る</inlineHelpText>
    <label>個客番 新契約・継続案内基準年月</label>
    <length>6</length>
    <type>Text</type>
</CustomField>