force-app/main/default/objects/Order__c/fields/KokyakuNextContractNG__c.field-meta.xml
<CustomField>
    <fullName>KokyakuNextContractNG__c</fullName>
    <label>個客番 次契約拒否フラグ</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>