force-app/main/default/objects/Order__c/fields/KokyakuResistDate__c.field-meta.xml
<CustomField>
    <fullName>KokyakuResistDate__c</fullName>
    <label>個客番 新規登録年月日</label>
    <length>8</length>
    <type>Text</type>
</CustomField>