force-app/main/default/objects/Order__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>姓（漢字）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>