force-app/main/default/objects/Order__c/fields/LastNameKana__c.field-meta.xml
<CustomField>
    <fullName>LastNameKana__c</fullName>
    <label>姓（カナ）</label>
    <length>15</length>
    <type>Text</type>
</CustomField>