force-app/main/default/objects/Order__c/fields/LastShippingDate__c.field-meta.xml
<CustomField>
    <fullName>LastShippingDate__c</fullName>
    <label>最新発送配本日</label>
    <type>Date</type>
</CustomField>