force-app/main/default/objects/Order__c/fields/LeaderCode__c.field-meta.xml
<CustomField>
    <fullName>LeaderCode__c</fullName>
    <externalId>true</externalId>
    <label>読者コード</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>