force-app/main/default/objects/Order__c/fields/MagazineCode__c.field-meta.xml
<CustomField>
    <fullName>MagazineCode__c</fullName>
    <label>雑誌ｺｰﾄﾞ</label>
    <length>30</length>
    <type>Text</type>
</CustomField>