force-app/main/default/objects/Order__c/fields/NoticeMailSendDate__c.field-meta.xml
<CustomField>
    <fullName>NoticeMailSendDate__c</fullName>
    <label>事前予告メール送信日</label>
    <type>Date</type>
</CustomField>