force-app/main/default/objects/Order__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>受注日時</label>
    <type>DateTime</type>
</CustomField>