force-app/main/default/objects/Order__c/fields/OrderDispNo__c.field-meta.xml
<CustomField>
    <fullName>OrderDispNo__c</fullName>
    <label>えびす受注番号(表示用)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>