force-app/main/default/objects/Order__c/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <externalId>true</externalId>
    <label>えびす受注番号(明細紐付け用)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>