force-app/main/default/objects/Order__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>支払い方法</label>
    <length>3</length>
    <type>Text</type>
</CustomField>