force-app/main/default/objects/Order__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>支払区分</label>
    <length>1</length>
    <type>Text</type>
</CustomField>