force-app/main/default/objects/Order__c/fields/PayoffPageId__c.field-meta.xml
<CustomField>
    <fullName>PayoffPageId__c</fullName>
    <label>精算ページID</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>