force-app/main/default/objects/Order__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>郵便番号</label>
    <length>15</length>
    <type>Text</type>
</CustomField>