force-app/main/default/objects/Order__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>内訳（商品定価）</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>