force-app/main/default/objects/Order__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <label>プロジェクトコード</label>
    <length>4</length>
    <type>Text</type>
</CustomField>