force-app/main/default/objects/Order__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>