force-app/main/default/objects/Order__c/fields/SchoolDeptName__c.field-meta.xml
<CustomField>
    <fullName>SchoolDeptName__c</fullName>
    <label>学部・学科・専攻・コース</label>
    <length>50</length>
    <type>Text</type>
</CustomField>