force-app/main/default/objects/Order__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <label>学校名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>