force-app/main/default/objects/Order__c/fields/SchoolYear__c.field-meta.xml
<CustomField>
    <fullName>SchoolYear__c</fullName>
    <label>学年</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>