force-app/main/default/objects/Order__c/fields/ShipBuildingName__c.field-meta.xml
<CustomField>
    <fullName>ShipBuildingName__c</fullName>
    <label>送付先住所３(ビル、マンション名等)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>