force-app/main/default/objects/Order__c/fields/ShipCityStreet__c.field-meta.xml
<CustomField>
    <fullName>ShipCityStreet__c</fullName>
    <label>送付先住所２(市区町村、番地)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>