force-app/main/default/objects/Order__c/fields/ShipCorpName__c.field-meta.xml
<CustomField>
    <fullName>ShipCorpName__c</fullName>
    <label>送付先会社名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>