force-app/main/default/objects/Order__c/fields/ShipDeptName__c.field-meta.xml
<CustomField>
    <fullName>ShipDeptName__c</fullName>
    <label>送付先部署名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>