force-app/main/default/objects/Order__c/fields/ShipFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShipFirstName__c</fullName>
    <label>送付先名（漢字）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>