force-app/main/default/objects/Order__c/fields/ShipFirstNameKana__c.field-meta.xml
<CustomField>
    <fullName>ShipFirstNameKana__c</fullName>
    <label>送付先名（カナ）</label>
    <length>25</length>
    <type>Text</type>
</CustomField>