force-app/main/default/objects/Order__c/fields/ShipLastName__c.field-meta.xml
<CustomField>
    <fullName>ShipLastName__c</fullName>
    <label>送付先姓（漢字）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>