force-app/main/default/objects/Order__c/fields/ShipLastNameKana__c.field-meta.xml
<CustomField>
    <fullName>ShipLastNameKana__c</fullName>
    <label>送付先姓（カナ）</label>
    <length>25</length>
    <type>Text</type>
</CustomField>