force-app/main/default/objects/Order__c/fields/ShippedNumOfBook__c.field-meta.xml
<CustomField>
    <fullName>ShippedNumOfBook__c</fullName>
    <label>発送済冊数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>