force-app/main/default/objects/Order__c/fields/ShipPhone__c.field-meta.xml
<CustomField>
    <fullName>ShipPhone__c</fullName>
    <label>送付先電話番号</label>
    <type>Phone</type>
</CustomField>