force-app/main/default/objects/Order__c/fields/ShippingCost__c.field-meta.xml
<CustomField>
    <fullName>ShippingCost__c</fullName>
    <label>送料</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>