force-app/main/default/objects/Order__c/fields/ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingDate__c</fullName>
    <label>配送日</label>
    <type>Date</type>
</CustomField>