force-app/main/default/objects/Order__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>配送方法</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>