force-app/main/default/objects/Order__c/fields/ShipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipPostalCode__c</fullName>
    <label>送付先郵便番号</label>
    <length>15</length>
    <type>Text</type>
</CustomField>