force-app/main/default/objects/Order__c/fields/ShipSlipNo__c.field-meta.xml
<CustomField>
    <fullName>ShipSlipNo__c</fullName>
    <label>宅配伝票番号</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>