force-app/main/default/objects/Order__c/fields/ShipState__c.field-meta.xml
<CustomField>
    <fullName>ShipState__c</fullName>
    <label>送付先住所１(都道府県)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>