force-app/main/default/objects/Order__c/fields/ShipType__c.field-meta.xml
<CustomField>
    <fullName>ShipType__c</fullName>
    <description>J:自宅 K:会社</description>
    <label>送付先区分</label>
    <length>1</length>
    <type>Text</type>
</CustomField>