force-app/main/default/objects/Order__c/fields/StartNumber__c.field-meta.xml
<CustomField>
    <fullName>StartNumber__c</fullName>
    <label>開始号</label>
    <length>4</length>
    <type>Text</type>
</CustomField>