force-app/main/default/objects/Order__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>個客番は、全住所を都道府県項目に連携(150文字)</description>
    <label>住所１(都道府県)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>