force-app/main/default/objects/Order__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>状態コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>