force-app/main/default/objects/Order__c/fields/StopRequestDate__c.field-meta.xml
<CustomField>
    <fullName>StopRequestDate__c</fullName>
    <label>継続停止申込日</label>
    <type>DateTime</type>
</CustomField>