force-app/main/default/objects/Order__c/fields/StoreHomeOfficeType__c.field-meta.xml
<CustomField>
    <fullName>StoreHomeOfficeType__c</fullName>
    <label>ストア_自宅／勤務先区分コード</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>