force-app/main/default/objects/Order__c/fields/StoreOrderId__c.field-meta.xml
<CustomField>
    <fullName>StoreOrderId__c</fullName>
    <externalId>true</externalId>
    <label>ストア_オーダーID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>