force-app/main/default/objects/Order__c/fields/TeikiType__c.field-meta.xml
<CustomField>
    <fullName>TeikiType__c</fullName>
    <description>「1」定期販売の受注</description>
    <label>定期販売区分</label>
    <length>1</length>
    <type>Text</type>
</CustomField>