force-app/main/default/objects/Order__c/fields/TeikiYM__c.field-meta.xml
<CustomField>
    <fullName>TeikiYM__c</fullName>
    <description>YYYYMMとして使用</description>
    <label>定期販売対象年月</label>
    <length>6</length>
    <type>Text</type>
</CustomField>