force-app/main/default/objects/Order__c/fields/ToyokeizaiId__c.field-meta.xml
<CustomField>
    <fullName>ToyokeizaiId__c</fullName>
    <label>会員ID(東洋経済用会員ID)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>