force-app/main/default/objects/Order__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>単価</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>