force-app/main/default/objects/Order__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>BookName__c</columns>
    <columns>NAME</columns>
    <columns>EbisuOrderId__c</columns>
    <columns>OrderDispNo__c</columns>
    <columns>MagazineCode__c</columns>
    <columns>ContactId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ContractStartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>すべての受注</label>
</ListView>